src/lib/testcases/fails/basic/fn_sig/main.rk
f: Int64 => Float64
f: a -> a

main: -> f 2.2
